killed K.6 and fixed #61

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -9219,16 +9219,16 @@ to the term \termref{structured OMS} in this \IS}
   DOL provides built-in support for a subset of the ``direct relations'' and specifies a formal semantics for them.  In addition, it supports the implementation of  the remainder of the COLORE metadata vocabulary as an ontology, reusing suitable existing metadata vocabularies such as OMV, and it supports the implementation of one or multiple Common Logic ontologies plus their annotations as one coherent library.
 \end{usecase}
 
-\begin{usecase}{Extending OWL with datatypes defined in CASL}{potential use case}{...}
-  \begin{itemize}
-  \item OWL datatypes are in practice restricted to the XML Schema datatypes
-  \item XML Schema can only specify the \emph{syntax} of datatypes
-  \item CASL can specify syntax (but not quite in the same way as XML Schema) \emph{and} semantics of datatypes
-  \end{itemize}
-\end{usecase}
+%% \begin{usecase}{Extending OWL with datatypes defined in CASL}{potential use case}{...}
+%%   \begin{itemize}
+%%   \item OWL datatypes are in practice restricted to the XML Schema datatypes
+%%   \item XML Schema can only specify the \emph{syntax} of datatypes
+%%   \item CASL can specify syntax (but not quite in the same way as XML Schema) \emph{and} semantics of datatypes
+%%   \end{itemize}
+%% \end{usecase}
 
-~\todonote[author=Christoph Lange,date=D:201204131320+02'00',type=todo]{ModuleRelDefn combined with approximation and RDF-based querying of annotation/metadata dimensions}
-~\todonote[author=Christoph Lange,date=D:201108212129+02'00',type=todo]{Maybe have an(other?) appendix that refers to the usage of DOL within ontology engineering methodologies, or at least to some good practices of using DOL}
+%% ~\todonote[author=Christoph Lange,date=D:201204131320+02'00',type=todo]{ModuleRelDefn combined with approximation and RDF-based querying of annotation/metadata dimensions}
+%% ~\todonote[author=Christoph Lange,date=D:201108212129+02'00',type=todo]{Maybe have an(other?) appendix that refers to the usage of DOL within ontology engineering methodologies, or at least to some good practices of using DOL}
 
 
 
