--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1196,7 +1196,7 @@ that a coherent system can be reached.
 
 
 In complex applications, which involve multiple OMS with overlapping concept spaces,
-it is often necessary to identify correspondence between concepts in the different OMS; this is called  OMS alignment\index{alignment}. 
+it is often necessary to identify correspondences between concepts in the different OMS; this is called  OMS alignment\index{alignment}. 
 While OMS alignment is most commonly studied for OMS formalized in the same OMS 
 language, the different OMS used by complex applications may also be written in different 
 OMS languages, which may even vary in their expressiveness. 
