emphasized XML _element_

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1456,7 +1456,7 @@ namespaces.%\todonote[author=Christoph
 %OMS we can recognize that a sentence is, \eg, stated in OWL, without
 %explicitly ``tagging'' it as ``OWL'' (which we would have to do in the case
 %of  a serialization that is merely text conforming).}
-\item The serialization shall use XML elements to represent all structural elements of an OMS.
+\item The serialization shall use XML \emph{elements} to represent all structural elements of an OMS.
 \item The schema shall not forbid both attributes and child elements from foreign namespaces (here: the
  DOL namespace \url{http://www.omg.org/spec/DOL/1.0/xml}) on any elements.\footnote{This is because either an attribute or a child element is used to inject identifiers into elements of the XML serialization; cf. clause~\ref{sec:existing-serialization}.}
 \end{itemize}
