except in "logic graph" contexts I am now using the term "RDF Schema" instead of RDFS, in accordance with version 1.1 of its W3C specification.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -962,7 +962,7 @@ Conformance of some translations is established in annex \ref{a:graph}.
 Conformance of the following subset of logical languages  shall be established: OWL2 (with profiles
 EL, RL, QL), CLIF, RDF, UML class diagrams.
 	&
-We establish conformance of OWL 2 (annex \ref{a:owl}), CLIF (annex \ref{a:cl}), RDF and RDFS (annex \ref{a:rdfs}) and UML class diagrams (annex \ref{a:uml-class}) 
+We establish conformance of OWL 2 (annex \ref{a:owl}), CLIF (annex \ref{a:cl}), RDF and RDF Schema (annex \ref{a:rdfs}) and UML class diagrams (annex \ref{a:uml-class}) 
 with DOL.
    \\ \hline
 %
@@ -1138,7 +1138,7 @@ language can be used as-is in DOL, by reference to its IRI. See \ref{sec:existin
 %
 6.8(c)		&
 Proposals establishing actually (or making this at least possible in theory) OntoIOp conformance of more logical languages and translations will be favored. 	&
-We establish conformance of OWL 2 (annex \ref{a:owl}), Common Logic (annex \ref{a:cl}), RDF and RDFS (annex \ref{a:rdfs}), UML class diagrams (annex \ref{a:uml-class}) and \CASL (annex \ref{a:casl})
+We establish conformance of OWL 2 (annex \ref{a:owl}), Common Logic (annex \ref{a:cl}), RDF and RDF Schema (annex \ref{a:rdfs}), UML class diagrams (annex \ref{a:uml-class}) and \CASL (annex \ref{a:casl})
 with DOL.
 	\\ \hline
 
@@ -1277,7 +1277,7 @@ semantics for DOL.
 \index{conformance|(}
 This clause defines conformance criteria for languages and logics that can be used with DOL, as well as conformance criteria for
 serializations, translations and applications. The conformance of a
-number of OMS languages (namely OWL 2, Common Logic, RDF and RDFS, UML Class Diagrams, CASL) as well as translations among
+number of OMS languages (namely OWL 2, Common Logic, RDF and RDF Schema, UML Class Diagrams, CASL) as well as translations among
 these is discussed in informative annexes of this \IS.
 
 It is expected that DOL will be used for other languages than the  set of DOL-conforming
@@ -1646,7 +1646,7 @@ collection of expressions (like non-logical symbols\index{non-logical symbol}, s
 \termdefinition{OMS language}{language equipped with a formal, declarative, logic-based semantics,
 plus non-logical annotations\index{annotation}.}
   \begin{example}
-    OMS languages include OWL 2 DL, Common Logic, F-logic, UML class diagrams, RDFS, and OBO.
+    OMS languages include OWL 2 DL, Common Logic, F-logic, UML class diagrams, RDF Schema, and OBO.
   \end{example}
   \begin{note}
   An OMS language is used for the formal specification of \termref{native OMS}.
@@ -2543,7 +2543,7 @@ translation that conform with \DOL  (\emph{normative}).
 
 \medskip \noindent Various languages are shown to be DOL conformant in
 informative annexes: OWL2 (annex \ref{a:owl}), Common Logic
-(annex~\ref{a:cl}), RDF and RDFS (annex~\ref{a:rdfs}), UML class
+(annex~\ref{a:cl}), RDF and RDF Schema (annex~\ref{a:rdfs}), UML class
 diagrams (annex~\ref{a:uml-class}, EMOF (annex~\ref{a:EMOF}), and
 \CASL (annex \ref{a:casl}).
 
@@ -2720,7 +2720,7 @@ between OMS as part of OMS networks in a semantically well-defined way. Thus, to
 
 %\section{Problem Statement}	
 %Logical languages are used in several fields of computing for the development of formal, machine-processable texts that carry a formal semantics. Among those fields are 1) ontologies formalizing domain knowledge, 2) formal models of systems, and 3) the formal specification of systems. Relevant languages include, but are not limited to:
-%?	the ontology languages OWL [OWL2], RDF [RDF, RDF-Semantics, RDFS [RDFS],
+%?	the ontology languages OWL [OWL2], RDF [RDF, RDF-Semantics, RDF Semantic [RDFS],
 %?	the modeling language UML [UML] (fUML [FUML] equips part of UML with a formal semantics)
 %?	general-purpose first-order languages: TPTP FOF, TPTP TFF [TPTP], F-logic [FLogic], Common Logic [CL]
 %?	more specialized specification logics like modal logics, temporal logics, higher-order logics, TPTP THF [TPTP]
@@ -2952,8 +2952,8 @@ The Dublin Core to PROV ontology translation%
 \footnote{\url{http://www.w3.org/TR/2013/NOTE-prov-dc-20130430/}}
   is expressed partly by a symbol mapping and partly by FOL rules. These FOL rules are implemented by CONSTRUCT patterns in the SPARQL RDF query language.%
 \footnote{E.g., \url{http://www.w3.org/TR/2013/NOTE-prov-dc-20130430/\#dct-creator}} 
-SPARQL has a formal specification of the evaluation semantics of its algebraic expressions, which is different from the model-theoretic semantics of the OWL and RDFS languages; nevertheless SPARQL CONSTRUCT is a popular and immediately executable syntax for expressing translation rules between ontologies in RDF-based languages in a subset of FOL.
-DOL  not only supports the reuse of the existing Dublin Core RDFS and PROV OWL ontologies as modules of a distributed ontology (= OMS network), but it is also able to support the description of the FOL translation rules in a sufficiently expressive ontology language, e.g. Common Logic, and thus enable formal verification of the translation from Dublin Core to PROV.
+SPARQL has a formal specification of the evaluation semantics of its algebraic expressions, which is different from the model-theoretic semantics of the OWL and RDF Schema languages; nevertheless SPARQL CONSTRUCT is a popular and immediately executable syntax for expressing translation rules between ontologies in RDF-based languages in a subset of FOL.
+DOL  not only supports the reuse of the existing Dublin Core RDF Schema and PROV OWL ontologies as modules of a distributed ontology (= OMS network), but it is also able to support the description of the FOL translation rules in a sufficiently expressive ontology language, e.g. Common Logic, and thus enable formal verification of the translation from Dublin Core to PROV.
 
 \ednote{Omit this use case, because we have no sample DOL text? FN: I would keep it}
 
@@ -3462,7 +3462,7 @@ This clause is informative. Its purpose is to briefly describe the
 %DOL \shall be applicable to any OMS language that has a formal, logic-based semantics or a semantics defined by translation to another OMS language with such a formal semantics. The annotation framework of DOL \should additionally be applicable to the non-logical constructs of such languages. This \IS \todonote[author=Christoph Lange,date=D:201109221211+02'00',type=fyi]{We can afford to say ``shall'' here, as these criteria are really something that we can fully provide} \shall specify formal criteria for establishing the conformance of an OMS language with DOL.  Annexes \shall establish the conformance of a number of relevant OMS languages with DOL; a registry shall offer the possibility to add further (also non-standardized) languages:\CLnote[date=D:201201100956+01'00']{John Sowa: Make it modular with a simple core that can run efficiently on small systems, but can grow indefinitely to support as much as anyone could desire.}
 %
 %\begin{description}
-%\item[normative] OWL, Common Logic, RDFS\todonote[author=Christoph Lange,date=D:201111021905+01'00']{RIF as well?  See \ticket{16}}
+%\item[normative] OWL, Common Logic, RDF Schema\todonote[author=Christoph Lange,date=D:201111021905+01'00']{RIF as well?  See \ticket{16}}
 %\item[informative] F-logic,  UML class diagrams, OBO (see appendix~\ref{a:ext-graph} for a longer list)
 %\end{description}
 %
@@ -3528,7 +3528,7 @@ This clause is informative. Its purpose is to briefly describe the
 %\label{f:DOL-translations}
 %\end{figure}
 %
-%For each pair $L_1$ and $L_2$ of OMS languages, OMS language translations $T_1$ and $T_2$ into a common target OMS language $L_T$ \should be specified. (If $L_T$ does not exist, the only way to express a heterogeneous OMS involving $L_1$ and $L_2$ may be to keep the DOL expression and the individual OMS in $L_1$ and $L_2$.)  These \should be translations into an OMS language that is more expressive than both $L_1$ and $L_2$, such that the union of the images of the translations is a subset of the target OMS language ($T_1(L_1)\cup T_2(L_2)\subseteq L_T$).  \fref{f:DOL-translations} outlines such an example, where Common Logic serves as the common target for OWL and RDFS, as it is more expressive than either of them.\todonote[author=Christoph Lange,date=D:201110060000+02'00',type=fyi]{In the context of that, specify when a document/an OMS conforms with DOL.}  If such a target OMS language or suitable translations do not yet exist, translations into a less expressive language may be specified as an alternative, such that the intersection of the images of the translations forms a subset of the target language ($T_1(L_1)\cap T_2(L_2)\subseteq L_T$), which \should be as large as possible.  For example, an OMS language that is more expressive than both Common Logic and F-Logic does not yet exist; therefore, it would be possible to specify translations into the first-order logic subset of either OMS language.
+%For each pair $L_1$ and $L_2$ of OMS languages, OMS language translations $T_1$ and $T_2$ into a common target OMS language $L_T$ \should be specified. (If $L_T$ does not exist, the only way to express a heterogeneous OMS involving $L_1$ and $L_2$ may be to keep the DOL expression and the individual OMS in $L_1$ and $L_2$.)  These \should be translations into an OMS language that is more expressive than both $L_1$ and $L_2$, such that the union of the images of the translations is a subset of the target OMS language ($T_1(L_1)\cup T_2(L_2)\subseteq L_T$).  \fref{f:DOL-translations} outlines such an example, where Common Logic serves as the common target for OWL and RDF Schema, as it is more expressive than either of them.\todonote[author=Christoph Lange,date=D:201110060000+02'00',type=fyi]{In the context of that, specify when a document/an OMS conforms with DOL.}  If such a target OMS language or suitable translations do not yet exist, translations into a less expressive language may be specified as an alternative, such that the intersection of the images of the translations forms a subset of the target language ($T_1(L_1)\cap T_2(L_2)\subseteq L_T$), which \should be as large as possible.  For example, an OMS language that is more expressive than both Common Logic and F-Logic does not yet exist; therefore, it would be possible to specify translations into the first-order logic subset of either OMS language.
 %
 %
 %
@@ -4196,7 +4196,7 @@ This section specifies the abstract syntax of identifiers of DOL OMS and their e
 In accordance with best practices for publishing OMS on the Web, identifiers of OMS and their 
 elements \should not just serve as \emph{names}, but also as \emph{locators}, which, when 
 dereferenced, give access to a concrete representation of an OMS or one of its elements.  (For the 
-specific case of RDFS and OWL OMS, these best practices are documented in 
+specific case of RDF Schema and OWL OMS, these best practices are documented in 
 \cite{W3C:NOTE-swbp-vocab-pub-20080828}.  The latter is a specialization of the linked data 
 principles, which apply to any machine-processable data published on the Web 
 \cite{BernersLee:LinkedData2006}.)  It is recommended that publicly accessible DOL OMS be published 
@@ -7105,10 +7105,10 @@ in order to obtain a theory in the \CL institution.
 
 The semantic conformance of RDF Schema (as specified in \nisref{W3C/TR REC-rdf-schema:2014}) with DOL is established in \cite{OntoGraph}.
 
-The way of representing RDFS ontologies as RDF graphs satisfies the criteria for RDF conformance.
+The way of representing RDF Schema ontologies as RDF graphs satisfies the criteria for RDF conformance.
 
 
-\begin{definition}[\RDF and \RDFS]
+\begin{definition}[\RDF and RDF Schema]
 Following \cite{Lucanu}, 
 we define the institutions for the Resource Description
 Framework (\RDF) and \RDF Schema (also known as \RDFS), respectively. 
@@ -8137,10 +8137,10 @@ logic, unions, etc.}
   \caption{Translations between conforming OMS languages (normative)}
   \label{fig:ontograph-standards}
 \end{figure}
-This annex provides a core graph of logics and translations, covering those OMS languages whose conformance with DOL is established in the preceding, normative annexes (OWL 2 DL in \aref{a:owl}, Common Logic in \aref{a:cl}, and RDFS in \aref{a:rdfs}).  The graph is shown in \fref{fig:ontograph-standards}.  Its nodes refer to the following OMS languages and profiles:
+This annex provides a core graph of logics and translations, covering those OMS languages whose conformance with DOL is established in the preceding, normative annexes (OWL 2 DL in \aref{a:owl}, Common Logic in \aref{a:cl}, and RDF Schema in \aref{a:rdfs}).  The graph is shown in \fref{fig:ontograph-standards}.  Its nodes refer to the following OMS languages and profiles:
 \begin{itemize}
 \item RDF \nisref{W3C/TR REC-rdf11-concepts:2014}
-\item RDFS \nisref{W3C/TR REC-rdf11-schema:2014}
+\item RDF Schema \nisref{W3C/TR REC-rdf11-schema:2014}
 \item EL, QL, RL (all being profiles of OWL) \nisref{W3C/TR REC-owl2-profiles:2009}
 \item OWL \nisref{W3C/TR REC-owl2-syntax:2009}
 \item CL (Common Logic) \nisref{ISO/IEC 24707:2007}
