--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1282,7 +1282,7 @@ these is discussed in informative annexes of this \IS.
 
 It is expected that DOL will be used for other languages than the  set of DOL-conforming
 languages that are discussed in this \IS. There is a  \textbf{\termref{registry} for DOL-conforming languages and translations} hosted
-at \url{http://ontohub.org}.  The registry  also includes descriptions of
+at \url{http://logichub.org}.  The registry  also includes descriptions of
 DOL-conforming languages and translations (as well as other information needed by implementors
 and users) in both human-readable and machine-processable form.  
 
@@ -1439,7 +1439,7 @@ Independently from these criteria, we distinguish different levels of conformanc
 serialization with respect to its means of conveniently abbreviating long IRI identifiers.
 \end{fminipage}
 
-We define four levels of conformance of a serialization of an OMS language with DOL.
+We define seven levels of conformance of a serialization of an OMS language with DOL.
 
 \begin{description}
 \item[XMI conformance]
