--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -8089,6 +8089,16 @@ we can define a corresponding institution that is a subinstitution
 of that for UML class diagrams (see annex~\ref{a:uml-class}).
 
 
+\infannex{Conformance of TPTP with DOL}\label{a:TPTP}
+
+TPTP \cite{TPTP,DBLP:conf/cade/SutcliffeSY94,DBLP:journals/jar/Sutcliffe09}
+is a language spoken by dozens of first-order theorem provers,
+and large libraries have been formalized in TPTP.
+The underlying logic is unsorted first-order logic. In 
+\cite{GoguenBurstall92}, many-sorted first has been formalized as
+an institution; the single-sorted sublogic (using only a fixed
+set of sorts $\{s\}$ is isomorphic to unsorted first-order logic.
+
 \infannex{Conformance of CASL with DOL}\label{a:casl}
 
 
@@ -9643,7 +9653,7 @@ be ambiguous in a normal request.
 \bibliographystyle{plain} 
 \renewcommand{\bibname}{References}
 \label{a:bibliography}
-\bibliography{dol,rfc}
+\bibliography{dol,rfc,tptp}
 \addcontentsline{toc}{chapter}{References}
 %%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%
