--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -77,7 +77,7 @@
   AUTHOR = {V. Lifschitz},
   TITLE = {Circumscription},
   BOOKTITLE = {Handbook of Logic in Artificial Intelligence and Logic Programming, Volume 3},
-  PAGES = {297-352},
+  PAGES = {297--352},
   PUBLISHER = {Oxford University Press},
   YEAR = {1994},
 }
@@ -92,7 +92,7 @@
 @INPROCEEDINGS{KutzEtAl:ChineseWhispers2010,
   AUTHOR = {Oliver Kutz and I. Normann and Till Mossakowski and D. Walther},
   TITLE = {Chinese Whispers and Connected Alignments},
-  BOOKTITLE = {Proc. 5th Int. Wsh. Ontology Matching (OM 2010)},
+  BOOKTITLE = {Proc.\ of the 5th Int. Workshop on Ontology Matching (OM 2010)},
   YEAR = {2010},
   NOTE = {\url{http://disi.unitn.it/~p2p/OM-2010/om2010_Tpaper3.pdf}},
 }
@@ -100,7 +100,7 @@
 @INPROCEEDINGS{CuencaGrauEtAl:ExtractingModulesOntologies2007,
   AUTHOR = {B. Cuenca Grau and I. Horrocks and Y. Kazakov and U. Sattler},
   TITLE = {Just the Right Amount: Extracting Modules from Ontologies},
-  BOOKTITLE = {Proc.\ 16th Int. World Wide Web Conf. (WWW)},
+  BOOKTITLE = {Proc.\ 16th Int. World Wide Web Conf.\ (WWW)},
   noADDRESS = {8--12 May 2007, Banff, Alberta, Canada},
   YEAR = 2007,
   PAGES = {717-726},
@@ -155,7 +155,7 @@
   year = 2009,
 }
 @article{Wikipedia:LinkedData2011,
-  author = {WIKIMEDIA FOUNDATION, ed.},
+  author = {Wikimedia Foundation, ed.},
   title = {Linked Data},
   journal = {from Wikipedia, the free encyclopedia, 9 November 2011.  \url{http://en.wikipedia.org/w/index.php?title=Linked_Data&oldid=459835053}},
   year = 2011,
@@ -231,7 +231,7 @@ ZimmerEuze06,
   TITLE = {General Logics},
   BOOKTITLE = {Logic Colloquium 87},
   YEAR = {1989},
-  PAGES = {275-329},
+  PAGES = {275--329},
 }
 
 @article{Comorphisms,
@@ -310,8 +310,8 @@ ZimmerEuze06,
 @INPROCEEDINGS{OWLSTime,
   AUTHOR = {Feng Pan and Jerry R. Hobbs},
   TITLE = {{Time in OWL-S}},
-  BOOKTITLE = {Proc. AAAI Spring Symp. Semantic Web Services},
-  PAGES = {29–36},
+  BOOKTITLE = {Proc.\ of the AAAI Spring Symp.\ on Semantic Web Services},
+  PAGES = {29--36},
   YEAR = {2004},
 }
 
@@ -605,25 +605,6 @@ HOWPUBLISHED  = {Programming Research Group, Oxford University},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
-
-@InProceedings{OM2014,
-  author = {Mihai Codescu and Till Mossakowski and Oliver Kutz},
-  title = {A Categorical Approach to Ontology Alignment},
-  year = {2014},
-  booktitle = {Proc. of the 9th International Workshop on Ontology Matching (OM-2014), ISWC-2014, Riva del Garda, Trentino, Italy.},
-  series = {CEUR-WS online proceedings},
-  keywords = {ontology alignment semantics colimit},
-  pdfurl = {http://www.informatik.uni-bremen.de/~okutz/resources/om2014.pdf},
-  abstract = {Ontology matching and alignment is a key mechanism for linking
-the diverse datasets and ontologies arising in the Semantic Web. We show
-that category theory provides the powerful abstractions needed for a uniform
-treatment at various levels: semantics, language design, reasoning and tools.
-The Distributed Ontology Language DOL is extended in a natural way with
-constructs for networks of ontologies. We in particular show how the three
-semantics of Zimmermann and Euzenat can be uniformly and faithfully represented using these DOL language constructs. Finally, we summarise how
-the DOL alignment features are currently being implemented in the Ontohub/Hets ecosystem, including support for the OWL and Alignment APIs.},
-  status = {Reviewed}
-}
 
 @inproceedings{LMK:LoLaModularOntologyLogLangTrans12,
   title = {{LoLa}: A Modular Ontology of Logics, Languages, and Translations},
