--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -34,6 +34,8 @@ draft%
 %final,
 ]{scrreprt}
 
+\usepackage{pdflscape}
+
 %\usepackage[show]{ed}
 \usepackage[show]{ed}
 
@@ -8234,34 +8236,64 @@ The institution comorphisms between these logics are
   \item $UML-CD \to \CL$.
 \end{itemize}
 
-All of them are selected as default logic translations. There are no institution morphisms. The partial union operation between logics is given in the table below, where
+All of them are selected as default logic translations. There are no institution morphisms. The partial union operation between logics is given in the tables below, where
 $\bot$ denotes undefinedness:
 
-\begin{tabular}{| l | l | l | l | l | l | l | l | l | l | l |}
+
+\begin{tabular}{| l | l | l | l | l | l |}
 \hline
-Union & $\ELDL++$ & \DLLiteR & \RL & \RDF & \RDFS & $\SROIQ(D)$ & \FOL & $SubPCFOL^=_{ms}$ & UML-CD & \CL\\
+Union & $\ELDL++$ & \DLLiteR & \RL & \RDF & \RDFS \\
 \hline
-$\ELDL++$ & $\ELDL++$ & $\SROIQ(D)$ & $\SROIQ(D)$ & $\SROIQ(D)$ & $\SROIQ(D)$ & $\SROIQ(D)$ & \FOL & $SubPCFOL^=_{ms}$ & \CL & \CL\\
+$\ELDL++$ & $\ELDL++$ & $\SROIQ(D)$ & $\SROIQ(D)$ & $\SROIQ(D)$ & $\SROIQ(D)$ \\
 \hline
-\DLLiteR & $\SROIQ(D)$ & \DLLiteR & $\SROIQ(D)$ & $\SROIQ(D)$ & $\SROIQ(D)$ & $\SROIQ(D)$ & \FOL & $SubPCFOL^=_{ms}$ & \CL & \CL\\
+\DLLiteR & $\SROIQ(D)$ & \DLLiteR & $\SROIQ(D)$ & $\SROIQ(D)$ & $\SROIQ(D)$ \\
 \hline
-\RL & $\SROIQ(D)$ &  $\SROIQ(D)$ & \RL & $\SROIQ(D)$ & $\SROIQ(D)$ & $\SROIQ(D)$ & \FOL & $SubPCFOL^=_{ms}$ & \CL & \CL\\
+\RL & $\SROIQ(D)$ &  $\SROIQ(D)$ & \RL & $\SROIQ(D)$ & $\SROIQ(D)$ \\
 \hline
-\RDF & $\SROIQ(D)$ &  $\SROIQ(D)$ &$\SROIQ(D)$ & \RDF & \RDFS & $\SROIQ(D)$ & \FOL & $SubPCFOL^=_{ms}$ & \CL & \CL\\
+\RDF & $\SROIQ(D)$ &  $\SROIQ(D)$ &$\SROIQ(D)$ & \RDF & \RDFS \\
 \hline
-\RDFS & $\SROIQ(D)$ &  $\SROIQ(D)$ &$\SROIQ(D)$ & \RDFS & \RDFS & $\SROIQ(D)$ & \FOL & $SubPCFOL^=_{ms}$ & \CL & \CL\\
+\RDFS & $\SROIQ(D)$ &  $\SROIQ(D)$ &$\SROIQ(D)$ & \RDFS & \RDFS \\
 \hline
-$\SROIQ(D)$& $\SROIQ(D)$ &  $\SROIQ(D)$ &$\SROIQ(D)$ & $\SROIQ(D)$ & $\SROIQ(D)$ & $\SROIQ(D)$ & \FOL & $SubPCFOL^=_{ms}$ & \CL & \CL\\
+$\SROIQ(D)$& $\SROIQ(D)$ &  $\SROIQ(D)$ &$\SROIQ(D)$ & $\SROIQ(D)$ & $\SROIQ(D)$ \\
 \hline
-\FOL &  \FOL & \FOL & \FOL & \FOL & \FOL & \FOL & \FOL & $SubPCFOL^=_{ms}$ & \CL & \CL\\
+\FOL &  \FOL & \FOL & \FOL & \FOL & \FOL \\
 \hline
-$SubPCFOL^=_{ms}$ &  $SubPCFOL^=_{ms}$ & $SubPCFOL^=_{ms}$ & $SubPCFOL^=_{ms}$ & $SubPCFOL^=_{ms}$ & $SubPCFOL^=_{ms}$ & $SubPCFOL^=_{ms}$ & $SubPCFOL^=_{ms}$ & $SubPCFOL^=_{ms}$ & \CL & $\bot$\\
+$SubPCFOL^=_{ms}$ &  $SubPCFOL^=_{ms}$ & $SubPCFOL^=_{ms}$ & $SubPCFOL^=_{ms}$ & $SubPCFOL^=_{ms}$ & $SubPCFOL^=_{ms}$ \\
 \hline
-UML-CD & \CL & \CL & \CL & \CL & \CL & \CL & \CL & \CL & UML-CD & \CL\\
+UML-CD & \CL & \CL & \CL & \CL & \CL \\
 \hline
-\CL &  \CL & \CL & \CL & \CL & \CL & \CL & \CL & $\bot$ & \CL & \CL\\
+\CL &  \CL & \CL & \CL & \CL & \CL \\
 \hline
 \end{tabular}
+
+\medskip
+
+\begin{tabular}{| l | l | l | l | l | l |}
+\hline
+Union & $\SROIQ(D)$ & \FOL & $SubPCFOL^=_{ms}$ & UML-CD & \CL\\
+\hline
+$\ELDL++$ & $\SROIQ(D)$ & \FOL & $SubPCFOL^=_{ms}$ & \CL & \CL\\
+\hline
+\DLLiteR & $\SROIQ(D)$ & \FOL & $SubPCFOL^=_{ms}$ & \CL& \CL\\
+\hline
+\RL  & $\SROIQ(D)$ & \FOL & $SubPCFOL^=_{ms}$ & \CL & \CL\\
+\hline
+\RDF  & $\SROIQ(D)$ & \FOL & $SubPCFOL^=_{ms}$ & \CL & \CL\\
+\hline
+\RDFS & $\SROIQ(D)$ & \FOL & $SubPCFOL^=_{ms}$ & \CL & \CL\\
+\hline
+$\SROIQ(D)$& $\SROIQ(D)$ & \FOL & $SubPCFOL^=_{ms}$ & \CL & \CL\\
+\hline
+\FOL &  \FOL & \FOL & $SubPCFOL^=_{ms}$ & \CL & \CL\\
+\hline
+$SubPCFOL^=_{ms}$ & $\SROIQ(D)$ & \FOL & $SubPCFOL^=_{ms}$ & $\bot$ & $\bot$\\
+\hline
+UML-CD & \CL & \CL & $\bot$ & UML-CD & \CL\\
+\hline
+\CL & \CL & \CL & $\bot$ & \CL & \CL\\
+\hline
+\end{tabular}
+
 
 The other assumptions on the logics in the heterogeneous logical environment hold in
 the expected way.\ednote{@Till: rephrase if need be}
